Ensure workiung on mobile

--- a/style.css
+++ b/style.css
@@ -29,9 +29,9 @@ footer {
 
 }
 
-@media (max-width: 350px){
+@media (max-width: 450px){
 
     .container {
-        width: 300px
+        width: 300px;
     }
 }
